@@ -2489,7 +2489,7 @@ sub w3cdtf_to_rfc1123 {
     $hour ||= 0;
     $min ||= 0;
     $sec ||= 0;
-    my $epoch = eval { Time::Local::timegm( $sec, $min, $hour, $mday, $mon-1, $year-1900 ) }
+    my $epoch = eval { Time::Local::timegm( $sec, $min, $hour, $mday, $mon-1, $year ) }
         or return;
 
     my $wday = ( gmtime($epoch) )[6];
@@ -2514,7 +2514,7 @@ sub rfc1123_to_epoch {
     $year += 2000 if $year < 77;
     $year += 1900 if $year < 100;
     $mon = $MoY{ uc($mon) } or return;
-    my $epoch = eval { Time::Local::timegm( $sec, $min, $hour, $mday, $mon-1, $year-1900 ) }
+    my $epoch = eval { Time::Local::timegm( $sec, $min, $hour, $mday, $mon-1, $year ) }
         or return;
     $epoch -= &get_tz_offset( $tz );
     $epoch;
@@ -2528,7 +2528,7 @@ sub w3cdtf_to_epoch {
     $hour ||= 0;
     $min ||= 0;
     $sec ||= 0;
-    my $epoch = eval { Time::Local::timegm( $sec, $min, $hour, $mday, $mon-1, $year-1900 ) }
+    my $epoch = eval { Time::Local::timegm( $sec, $min, $hour, $mday, $mon-1, $year ) }
         or return;
 
     $epoch -= &get_tz_offset( $tz );
